--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,10 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
+    "es6-promisify": "^6.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.0.15",
+    "nodemon": "^1.17.3",
     "path": "^0.12.7",
     "pug": "^2.0.3"
   }
