--- a/package.json
+++ b/package.json
@@ -19,12 +19,21 @@
   "homepage": "https://github.com/db001/nodePractice#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "dotenv": "^5.0.1",
     "es6-promisify": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.1.2",
+    "md5": "^2.2.1",
     "mongoose": "^5.0.15",
+    "mongoose-mongodb-errors": "0.0.2",
     "nodemon": "^1.17.3",
+    "passport": "^0.4.0",
+    "passport-local-mongoose": "^5.0.0",
     "path": "^0.12.7",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "validator": "^10.1.0"
   }
 }
