--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
+    "crypto": "^1.0.1",
     "dotenv": "^5.0.1",
     "es6-promisify": "^6.0.0",
     "express": "^4.16.3",
